--- a/segmentation/segmentation.ipynb
+++ b/segmentation/segmentation.ipynb
@@ -6,7 +6,7 @@
     "id": "rCSP-dbMw88x"
    },
    "source": [
-    "# **Import necessary libraries**"
+    "# **Importing necessary libraries**"
    ]
   },
   {
